# dotpaw

./: README.md  pyproject.toml  test.paw
src/dotpaw/: dotpaw.py
tests/: test_dotpaw.py
